correction version mobile

--- a/front/scss/style.scss
+++ b/front/scss/style.scss
@@ -344,6 +344,7 @@ footer {
         width: 95%;
         height: 100%;
         margin: auto;
+        margin-top: 35px;
 
 
         li {
@@ -380,7 +381,7 @@ footer {
             margin: auto;
             width: 95%;
             margin-bottom: 20px;
-            margin-top: 33px;
+            margin-top: 45px;
 
             li {
                 font-size: 15px;
